feat: cleanup package config
: develop

--- a/nfpm.yaml
+++ b/nfpm.yaml
@@ -1,23 +1,13 @@
 name: "shared-shell"
 arch: "amd64"
 platform: "linux"
-version: "0.1.0"
+version: "0.4.0"
 section: "default"
 priority: "extra"
-#provides:
-#- shared-shell
-#depends:
-#- foo
-#- bar
-# recommends on rpm packages requires rpmbuild >= 4.13
-recommends:
-- bash
-# suggests on rpm packages requires rpmbuild >= 4.13
-#suggests:
-#- something-else
-#conflicts:
-#- not-foo
-#- not-bar
+provides:
+- shared-shell
+depends:
+- bash 
 maintainer: "Sascha Andres <sascha.andres@outlook.com>"
 description: |
   Some scripts I use to use in scripts
